= Changes

== [Future] - ?

=== Fixed

* (*Breaking*) Since migrating to a Kotlin Scripting backend, environment variables for repository authentication now use the `$FOO` syntax vs the `{{FOO}}` syntax. This has been broken since 4.2.0. (fixed thanks to https://github.com/rocketraman[rocketraman])

== [4.2.2] - 2023-04-29

=== Added

* Updated Gradle to version 8.0.2

=== Fixed

* Fixed handling path with spaces on Windows https://github.com/kscripting/kscript/issues/397[#397] (thanks to https://github.com/ckaag[ckaag])
* Fixed build script (dependencies between tasks)
* Fixed reading Unicode characters from executed scriptlets
* Fixed Windows integration tests


== [4.2.1] - 2023-01-26

=== Added

* Scoop installer (thanks to https://github.com/Dany-coder778[Dany-coder778] and https://github.com/goto1134[goto1134])

=== Fixed

* The correct way of resolving kscript binary on Windows (thanks to https://github.com/goto1134[goto1134])

== [4.2.0] - 2023-01-14

=== Breaking changes

* Renamed environment variable from 'KSCRIPT_DIR' to 'KSCRIPT_DIRECTORY'

=== Added

* New GitHub organization: http://github.com/kscripting[kscripting]
* More work on Windows shell compatibility; most functionality works on Windows as on systems with bash
* Change the name of kscript package to io.github.kscripting:kscript
* Final execution of script is handled by kscript, not by bash (reduces dependency on bash)
* Separate library for shell execution kscripting/shell
* Ability to provide local artifacts path through *KSCRIPT_DIRECTORY_ARTIFACTS* or configuration file property:
 *scripting.directory.artifacts* (thanks to https://github.com/vsajip[Vsajip] for initial implementation)
* kscript jar is released to Maven Central: *io.github.kscripting:kscript:4.2.0*
* Change the way of checking latest kscript version (simplifies releases)
* Deprecate old annotations in kscript-annotations library
* Improved implementation: VersionChecker, ConfigBuilder etc.
* Updated Gradle and dependencies